fixed responsibilities not showing

--- a/PortfolioPackage/main/default/lwc/assignmentCard/assignmentCard.css
+++ b/PortfolioPackage/main/default/lwc/assignmentCard/assignmentCard.css
@@ -7,7 +7,7 @@
 }
 img {
     height: 100px;
-    width: 100%;
+    max-width: 105px;
 }
 
 .slds-col p {
